# caxai

./: .env.example  .gitignore  Makefile  auth.config.ts  auth.ts  docker-compose.yml  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  readme.md  requirements.txt  routes.ts
actions/: create-todo.ts  del-todos.ts  fetch_todos.ts  login.ts  logout.ts  refresh-token.ts
api/: index.py  settings.py
api/data/: _db_config.py  _sqlalchemy_models.py  _todos_crud.py  _user_auth.py
api/models/: _todo_crud.py  _user_auth.py
api/utils/: _helpers.py
app/: layout.tsx  not-found.tsx  page.tsx
auth-server/: .env.example  .env.gcp.yaml.example  Dockerfile-dev  pyproject.toml
auth-server/app/: config_db.py  crud.py  main.py  models.py  service.py  utils.py
auth-server/app/core/: config_db.py  utils.py
auth-server/tests/: test_main.py
fastapi_backend/: Dockerfile  requirements.txt
fastapi_cloud_msa/: alembic.ini  requirements.txt
fastapi_microservice/: Dockerfile
microservice_next_fe/: middleware.ts  pnpm-lock.yaml
next-fast-api-app/: .env.example  next.config.js  package.json  pnpm-lock.yaml  routes.ts
next_fastapi/: auth.ts  requirements.txt
nextjs-client/: .env.example  Dockerfile  Dockerfile-dev  Makefile  middleware.ts  package.json  pnpm-lock.yaml  pyproject.toml  readme.md
nextjs14/: auth.config.ts  auth.ts  package.json  pnpm-lock.yaml
nextjs_app_fastapi/: README.md  alembic.ini  middleware.ts  pnpm-lock.yaml  routes.ts
nextjs_msa_fe/: README.md
streamlit/: main.py  requirements.txt
todo-server/: .env.example  .env.gcp.yaml.example  Dockerfile  Dockerfile-dev  Dockerfile-prod  pyproject.toml
todo-server/app/: crud.py  main.py  models.py  service.py
todo-server/app/core/: config_db.py  settings.py
todo-server/tests/: test_main.py
types/: todos.d.ts  user.d.ts
(+151 files in other folders)
