[tool.poetry]
name = "cax"
version = "0.1.0"
description = "Multi User Custom GPT & Web App. Chat or Talk with TasksPal GPT on ChatGPT interface and review the updates live NextJS Web App :D"
authors = ["Muhammad Junaid <mr.junaidshaukat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.28"
psycopg2-binary = "^2.9.9"
python-jose = "^3.3.0"
pytest-asyncio = "^0.23.5.post1"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
