[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Muhammad Junaid <mr.junaidshaukat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.27.0"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
psycopg = {extras = ["binary"], version = "^3.1.18"}
sqlmodel = "^0.0.16"
email-validator = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
